feat(cmp): 适配各平台音频播放，细节优化